src/test/resources/tokens/invalid/double_missing_whole_part.unpick
unpick v3
group double
    .5